--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "author": "Andreas Kruhlmann",
     "license": "GPL-3.0-or-later",
     "homepage": "https://github.com/Kruhlmann/cardlock#readme",
-    "files": ["dist", "bin"],
+    "files": [
+        "dist",
+        "bin"
+    ],
     "engines": {
         "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
     },
@@ -19,7 +22,39 @@
         "type": "git",
         "url": "git+https://github.com/Kruhlmann/cardlock.git"
     },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/**/*.ts"
+        ],
+        "coveragePathIgnorePatterns": [
+            "<rootDir>/node_modules"
+        ],
+        "coverageReporters": [
+            "json",
+            "lcov",
+            "text"
+        ],
+        "coverageThreshold": {
+            "global": {
+                "branches": 90,
+                "functions": 90,
+                "lines": 90,
+                "statements": 90
+            }
+        },
+        "transform": {
+            ".ts": "ts-jest"
+        },
+        "testEnvironment": "node",
+        "testRegex": "\\.test\\.ts$",
+        "moduleFileExtensions": [
+            "ts",
+            "js",
+            "json"
+        ]
+    },
     "devDependencies": {
+        "@types/jest": "^27.4.0",
         "@types/node": "^17.0.13",
         "@typescript-eslint/eslint-plugin": "^5.8.0",
         "@typescript-eslint/parser": "^5.8.0",
@@ -32,8 +67,10 @@
         "eslint-plugin-unicorn": "^39.0.0",
         "eslint_d": "^11.1.1",
         "gts": "^3.1.0",
+        "jest": "^27.5.1",
         "prettier": "^2.5.1",
         "source-map-support": "^0.5.21",
+        "ts-jest": "^27.1.3",
         "tslib": "^2.3.1",
         "typescript": "^4.5.4"
     },
